--- a/styles.css
+++ b/styles.css
@@ -10,177 +10,178 @@
     box-sizing: inherit;
 }
 
+h1,
+h2,
+h3,
+body,
+p {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   
   font-family: 'Spartan', sans-serif;
   font-size: 15px;
-
-}
-
-
-.attribution {
-  font-size: 11px;
   text-align: center;
-  clear: both;
-  padding-top: 96px;
-}
-
-.attribution a {
-  color: hsl(228, 45%, 44%);
-  color: red;
-}
-
-main {
-  max-width: 1300px;
-  margin: 0 auto;
-
-
-
-}
-
-.wrapper-1,  .wrapper-3,
-.wrapper-4, .wrapper-5 {
-  float: left;
-  
-}
-
-
-.wrapper-1 {
-  width: 40%;
-
-  margin-top: 96px;
-}
-
-
-.wrapper-2 {
-  float: right;
-  padding-top: 24px;
-  margin-top: 96px;
-  
-}
-
-.wrapper-3 {
-  clear: left;
-}
-
-.wrapper-3, .wrapper-4, .wrapper-5 {
-  width: calc(33.3333% - 24px);
-  margin-top: 48px;
-  background-color: hsl(300, 43%, 22%);
-  color: hsl(0, 0%, 100%);
 
 }
 
 h1 {
-  
-  line-height: 1;
-  font-size: 3.2em;
+  padding: 3rem 2.5rem 0;
+  margin-bottom: 2rem;
+  line-height: 1.1;
+  font-size: 2em;
   font-weight: 700;
   color: hsl(300, 43%, 22%);
-  padding-right: 12px;
-  margin-bottom: 0;
-  width: 90%;
 }
 
+.tagline {
+  color: hsl(303, 10%, 53%);
+  font-weight: 500;
+  line-height: 1.8;
+  margin: 0 2em 2rem;
+}
 
 .review {
   font-weight: 700;
   background-color: hsl(300, 24%, 96%);
   color: hsl(300, 43%, 22%);
-  width: 500px;
+  padding: 1em;
+  margin: 0 2em 1em;
 }
 
-.review:nth-child(1) {
-   /* margin-right: 64px; */º 
-}
-
-.review:nth-child(2) {
- /* margin-right: 32px; */
+.review p {
+  margin-top: .25em;
 }
 
 
-
-.tagline {
-  color: hsl(303, 10%, 53%);
-  font-weight: 500;
-  line-height: 1.6;
-  width: 90%;
-}
-.wrapper-3 {
-  /* margin-top: 120px; */
-}
-
-.wrapper-4 {
- /*  margin-top: 140px; */
- margin-left: 16px;
-}
-
-.wrapper-5 {
- /* margin-top: 164px; */
- margin-left: 16px;
-} 
-
-.testimonial  {
-  padding: 32px 48px;
+.testimonial {
+  
+  background-color: hsl(300, 43%, 22%);
+  color: hsl(0, 0%, 100%);
+  padding: 1rem 2rem;
   border-radius: 5px;
+  margin: 0 2em 1em;
+  text-align: left;
+  display: grid;  
+  grid-template-columns:  1fr 4fr;
+  gap: 1em;
+  align-items: center;
   
 }
 
-.testimonial-header {
-  vertical-align: middle;
+.testimonial-quote {
+  grid-row: 2;
+  grid-column: 1/-1;
+}
+
+
+.testimonial-meta {
   line-height: 1.6;
 }
 
 
 
-.testimonial-header h2, .testimonial-header h3 {
-  padding-left: 80px;
-}
-
-.testimonial-header h2 {
+.testimonial-meta h2 {
   font-size: 1rem;
-  margin-bottom: 0;
-  margin-top: 16px;
   
 }
 
-.testimonial-header h3 {
+.testimonial-meta h3 {
   
   font-size: .9rem;
   font-weight: 400;
   color: hsl(333, 80%, 67%);
-  margin-top: 0;
   
 }
 
-.testimonial-header img {
-  float: left;
+.testimonial img {
   border-radius: 50%;
-  height: 56px;
 }
 
 .testimonial p {
-  clear: both;
-  margin-top: 64px;
   font-size: .9rem;
   line-height: 1.8;
+  font-weight: 500;
 }
 
-.review {
-  padding: 16px;
-  margin-top: 8px;
-  margin-right: 16px;
-}
+@media screen and (min-width: 500px) {
 
-.review p {
-  display: inline;
-  padding-left: 32px;
-}
+  html, body {
+    height: 100%;
+  }
 
-.wrapper-1 {
-  margin-left: 16px;
-}
+  
+  main {
+    height: 100%;
+    margin-top: 3em;
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.wrapper-3 {
-  margin-left: 16px;
+  .hero {
+    flex: 1;
+  }
+
+  .reviews {
+    flex: 1;
+    display: grid;
+    align-content: center;
+    grid-gap: 0;
+    grid-template-columns: repeat(9, minmax(auto, 1fr));
+
+  }
+
+  .reviews article:nth-child(1) {
+    grid-row: 1;
+    grid-column: 1 / span 7;
+  }
+
+  .reviews article:nth-child(2) {
+    grid-row: 2;
+    grid-column: 2 / span 7;
+  }
+
+  .reviews article:nth-child(3) {
+    grid-row: 3;
+    grid-column: 3 / span 7;
+  }
+
+
+
+  .reviews p {
+    display: inline;
+    margin-left: 2em;
+  }
+
+  .testimonials {
+    display: grid;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-template-rows: repeat (9, 1fr);
+    gap: 2em;
+    margin: 0 2em 2em;
+  }
+
+  .testimonials article:nth-child(1) {
+    grid-column: 1;
+    grid-row: 1 / span 8;
+
+  }
+
+  .testimonials article:nth-child(2) {
+    grid-column: 2;
+    grid-row: 2 / span 8;
+    
+  }
+  
+  .testimonials article:nth-child(3) {
+    grid-column: 3;
+    grid-row: 3 / span 8;
+
+  }
+
+  .testimonial {
+    margin: 0;
+  }
 }
