--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,7 @@ h1 {
     flex: 1;
     display: grid;
     align-content: center;
-    grid-gap: 0;
+    gap: 0;
     grid-template-columns: repeat(9, minmax(auto, 1fr));
 
   }
