--- a/styles.css
+++ b/styles.css
@@ -24,71 +24,81 @@ body {
   font-family: 'Spartan', sans-serif;
   font-size: 15px;
   text-align: center;
+  padding: 4em 2em 0;
+
 
 }
 
 h1 {
-  padding: 3rem 2.5rem 0;
-  margin-bottom: 2rem;
   line-height: 1.1;
   font-size: 2em;
-  font-weight: 700;
   color: hsl(300, 43%, 22%);
+
+  padding-inline: 1em;
+  margin-bottom: 1.5rem;
 }
 
 .tagline {
   color: hsl(303, 10%, 53%);
   font-weight: 500;
-  line-height: 1.8;
-  margin: 0 2em 2rem;
+  line-height: 1.6;
+
+  margin-bottom: 2rem;
 }
 
 .review {
   font-weight: 700;
   background-color: hsl(300, 24%, 96%);
   color: hsl(300, 43%, 22%);
+
+  margin-bottom: 1rem;
   padding: 1em;
-  margin: 0 2em 1em;
+
 }
 
 .review p {
-  margin-top: .25em;
+  margin-top: 1em;
 }
-
 
 .testimonial {
   
   background-color: hsl(300, 43%, 22%);
   color: hsl(0, 0%, 100%);
-  padding: 1rem 2rem;
   border-radius: 5px;
-  margin: 0 2em 1em;
   text-align: left;
-  display: grid;  
-  grid-template-columns:  1fr 4fr;
-  gap: 1em;
+
+  margin-bottom: 1rem;
+  padding: 2rem;
+  
+}
+
+.testimonial-header {
+  display: flex;
   align-items: center;
-  
+  gap: 2em;
 }
 
-.testimonial-quote {
-  grid-row: 2;
-  grid-column: 1/-1;
-}
-
-
-.testimonial-meta {
-  line-height: 1.6;
-}
-
-
-
-.testimonial-meta h2 {
+.testimonial-header h2 {
   font-size: 1rem;
-  
+}
+.testimonial-header h3 {
+  margin-top: .3rem;
 }
 
-.testimonial-meta h3 {
+.testimonial-header img {
+  height: 3em;
+}
+
+.testimonial p {
+  margin-top: 1.5rem;
+}
+
+
+
+
+
+
+.testimonial-title h3 {
   
   font-size: .9rem;
   font-weight: 400;
@@ -106,7 +116,7 @@ h1 {
   font-weight: 500;
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 700px) {
 
   html, body {
     height: 100%;
@@ -114,74 +124,58 @@ h1 {
 
   
   main {
-    height: 100%;
-    margin-top: 3em;
+    min-height: 100%;
     display: flex;
     flex-wrap: wrap;
   }
 
-  .hero {
-    flex: 1;
-  }
-
-  .reviews {
-    flex: 1;
-    display: grid;
-    align-content: center;
-    gap: 0;
-    grid-template-columns: repeat(9, minmax(auto, 1fr));
-
-  }
-
-  .reviews article:nth-child(1) {
-    grid-row: 1;
-    grid-column: 1 / span 7;
-  }
-
-  .reviews article:nth-child(2) {
-    grid-row: 2;
-    grid-column: 2 / span 7;
-  }
-
-  .reviews article:nth-child(3) {
-    grid-row: 3;
-    grid-column: 3 / span 7;
-  }
-
-
-
-  .reviews p {
-    display: inline;
-    margin-left: 2em;
+  .hero, .reviews {
+    flex: 1 1 50%;
   }
 
   .testimonials {
-    display: grid;
-    grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows: repeat (9, 1fr);
-    gap: 2em;
-    margin: 0 2em 2em;
+
+    display: flex;
+    gap: 1em;
+   
   }
 
-  .testimonials article:nth-child(1) {
-    grid-column: 1;
-    grid-row: 1 / span 8;
-
+  .review {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .testimonials article:nth-child(2) {
-    grid-column: 2;
-    grid-row: 2 / span 8;
-    
+  .review:nth-child(1) {
+    margin-left: 0;
+  }
+
+  .review:nth-child(3) {
+    margin-right: 0;
+  }
+
+  .review p {
+    display: inline;
+    margin-left: 1em;
   }
   
-  .testimonials article:nth-child(3) {
-    grid-column: 3;
-    grid-row: 3 / span 8;
+
+  .testimonial {
+    height: 18em;
+  }
+
+  .testimonial:nth-child(2) {
+    
+    margin-top: 2em;
+  }
+  
+  .testimonial:nth-child(3) {
+    
+    margin-top: 4em;
 
   }
 
   .testimonial {
-    margin: 0;
+    
   }
 }
